[gd_scene load_steps=6 format=3 uid="uid://c6nm2hjowhamv"]

[ext_resource type="Script" path="res://Measure/measure.gd" id="1_qhife"]
[ext_resource type="Texture2D" uid="uid://rc0on0kdbji7" path="res://Measure/Barlines.png" id="2_m00f0"]

[sub_resource type="Curve2D" id="Curve2D_2ym76"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 72, 128, 0, 0, 0, 0, 424, 128)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vdu1"]
size = Vector2(456, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktkx5"]
atlas = ExtResource("2_m00f0")
region = Rect2(156, 0, 39, 140)

[node name="Measure" type="Area2D"]
script = ExtResource("1_qhife")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_2ym76")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(72, 128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(228, 100)
shape = SubResource("RectangleShape2D_3vdu1")

[node name="SelectionRect" type="ColorRect" parent="."]
visible = false
offset_top = 1.0
offset_right = 456.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(1, 1, 0.572549, 0.352941)

[node name="Figures" type="Node2D" parent="."]

[node name="Barline" type="Sprite2D" parent="."]
position = Vector2(424, 32)
texture = ExtResource("2_m00f0")
centered = false
region_enabled = true
region_rect = Rect2(120, 0, 40, 140)

[node name="StartRepBarline" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 32)
texture = SubResource("AtlasTexture_ktkx5")
centered = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
